# Rust_Home_Server

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
src/: db.rs  handlers.rs  main.rs
src/schemas/: root.rs
