[package]
name = "home_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".","migration", "entity"]

[dependencies]
actix-web = { version = "4.0.0-beta.10" }
actix-cors = "0.4.0"
env_logger = "0.8"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
dotenv = "0.15"
juniper = { git = "https://github.com/graphql-rust/juniper" }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ], default-features = false }
migration = { path = "migration" }
entity = { path = "entity" }
